--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv": "^17.2.2",
+    "file-type": "^16.5.4",
     "mongoose": "^8.18.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
