--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "file-type": "^16.5.4",
+    "jose": "^6.1.1",
     "mongoose": "^8.18.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
